<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Astro help me</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>


    <string name="keep_me_login">Keep Me Login</string>
    <string name="submit">Submit</string>
    <string name="rooted_device_message">Sorry! your device isn\'t passing Tramo Norton\'s security checks.This may be because your device is rooted,or is running an un certified or custom OS build. As a result, Tramo Norton can\'t confirm that device meets Tramo Norton\'s security standards.</string>
    <string name="rooted_device_title">App can\'t run, this is rooted device</string>
    <string name="no_internet_message">App is enable to access your network connection, make sure your device has sufficient connection</string>
    <string name="please_check_transaction_report">Please Check Transaction Report</string>
    <string name="transaction_error_message">Your transaction done with unknown response, please check report for status(may be success, failed, or not happened yet)</string>
    <string name="login">Login</string>
    <string name="failed">Failed</string>
    <string name="select_brand">Select Brand</string>
    <string name="otp_is">your otp is</string>

    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="resetting_password">Resetting password</string>
    <string name="alt_mobile">Alt Mobile</string>
    <string name="colon">   : </string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="gst_number">Gst Number</string>
    <string name="pan_number">Pan Number</string>


    <string name="selected_item">Select Service :</string>
    <string-array name="Services">
        <item>Balance Enquiry</item>
        <item>Cash Withdraw</item>
        <item>Mini Statement</item>
    </string-array>
    <string name="selected_finger">Select Finger :</string>
    <string-array name="Finger">
        <item>FIR</item>
        <item>FMI</item>
        <item>FMR</item>
    </string-array>

    <string name="selected_bank">Select Bank :</string>

    <string-array name="Bank">
        <item>Select Bank</item>
        <item>State Bank of India</item>
        <item>HDFC Bank</item>
        <item>Paytm Payment Bank</item>
        <item>ICICI Bank</item>
        <item>Yes Bank</item>
        <item>PNB Bank</item>
        <item>Kotak Mahindra Bank</item>
        <item>Union Bank</item>
        <item>Andhra  Bank</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="astro_help_me">Astro Help Me</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_register_now">Don\'t Have an account? Register Now</string>

    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="kundli">Kundli</string>
    <string name="match_making">Match Making</string>
    <string name="horoscope">Horoscope</string>
    <string name="talk_to_nastrologer">Talk to\nAstrologer</string>
    <string name="live_tv_astrologer">Live TV Astrologer</string>
    <string name="vivek">Vivek</string>
    <string name="bobby">Bobby</string>
    <string name="vishal">Vishal</string>
    <string name="kamal">Kamal</string>
    <string name="boby">Boby</string>
    <string name="_4_3_free">4.3 | Free</string>
    <string name="_2_4_free">2.4 | Free</string>
    <string name="raghu">Raghu</string>
    <string name="_2_3_free">2.3 | Free</string>
    <string name="krishna">Krishna</string>
    <string name="_1_3_free">1.3 | Free</string>
    <string name="daily_n_panchang">Daily \n Panchang</string>
    <string name="numerology">Numerology</string>
    <string name="dhruv">Dhruv</string>
    <string name="bhirat_nhoroscope">Bhirat \nHoroscope</string>
    <string name="ask_a_n_question">Ask A\n Question</string>
    <string name="astro_shop">Astro Shop</string>
    <string name="magazine">Magazine</string>
    <string name="kp_system">KP System</string>
    <string name="lal_kitab">Lal Kitab</string>
    <string name="varshphal">Varshphal</string>
    <string name="learn_nastrology">Learn \nAstrology</string>
    <string name="porutham">Porutham</string>
    <string name="festivals">Festivals</string>
    <string name="miscellions">Miscellions</string>
    <string name="dasha">Dasha</string>
    <string name="calendar">Calendar</string>
    <string name="share_app_with_friends">Share App with Friends</string>
    <string name="show_kundli">Show Kundli</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="time_of_birth">Time of Birth</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="astrology_kundli_details">Astrology Kundli Details</string>
    <string name="ascendant">Ascendant:</string>
    <string name="ascendant_lord">Ascendant Lord:</string>
    <string name="varna">Varna :</string>
    <string name="vashya">Vashya:</string>
    <string name="yoni">Yoni:</string>
    <string name="gan">Gan:</string>
    <string name="nadi">Nadi:</string>
    <string name="signlord">SignLord:</string>
    <string name="sign">sign:</string>
    <string name="naksahtra">Naksahtra:</string>
    <string name="naksahtralord">NaksahtraLord:</string>
    <string name="charan">Charan:</string>
    <string name="yog">Yog:</string>
    <string name="karan">Karan:</string>
    <string name="tithi">Tithi:</string>
    <string name="name_alphabet">Name alphabet:</string>
    <string name="paya">paya:</string>
    <string name="tatva">Tatva:</string>
    <string name="astrologer_registration">Astrologer Registration</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_experience">Enter Your Experience</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="enter_your_short_bio">Enter Your Short Bio</string>
    <string name="daily_panchang">Daily Panchang</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="show_panchang">Show Panchang</string>
    <string name="day">Day:</string>
    <string name="nakshatra">Nakshatra:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="vedic_sunrise">Vedic Sunrise:</string>
    <string name="vedic_sunset">Vedic Sunset:</string>
    <string name="numerlogy">Numerlogy</string>
    <string name="show_numerology">Show Numerology</string>
    <string name="numerology_for_you">Numerology for You</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="destiny_number">Destiny Number:</string>
    <string name="radical_number">Radical Number:</string>
    <string name="name_number">Name Number:</string>
    <string name="evil_number">Evil Number:</string>
    <string name="fav_color">Fav Color:</string>
    <string name="fav_day">Fav Day:</string>
    <string name="fav_god">Fav God:</string>
    <string name="fav_mantra">Fav Mantra:</string>
    <string name="fav_metal">Fav Metal:</string>
    <string name="fav_stone">Fav Stone:</string>
    <string name="fav_sub_stone">Fav Sub Stone:</string>
    <string name="friendly_number">Friendly Number:</string>
    <string name="neutral_number">Neutral Number:</string>
    <string name="radical_ruler">Radical Ruler:</string>
    <string name="enter_male_name">Enter Male Name</string>
    <string name="date_of_birth_male">Date of Birth Male</string>
    <string name="time_of_birth_male">Time of Birth Male</string>
    <string name="place_of_birth_male">Place of Birth Male</string>
    <string name="enter_female_name">Enter Female Name</string>
    <string name="date_of_birth_female">Date of Birth Female</string>
    <string name="time_of_birth_female">Time of Birth Female</string>
    <string name="place_of_birth_female">Place of Birth Female</string>
    <string name="fill_male_data">Fill Male Data</string>
    <string name="fill_female_data">Fill Female Data</string>
    <string name="match_making_details">Match Making Details</string>
    <string name="male_manglik_details">Male Manglik Details</string>
    <string name="manglik_status">Manglik Status:</string>
    <string name="based_on_aspect">Based on Aspect:</string>
    <string name="based_on_house">Based on House:</string>
    <string name="manglik_report">Manglik Report:</string>
    <string name="female_manglik_details">Female Manglik Details</string>
    <string name="conclusion">Conclusion</string>
    <string name="match">Match:</string>
    <string name="report">Report:</string>
    <string name="know_your_future_from">Know your Future From</string>
    <string name="professional">Professional</string>
    <string name="astrologer">Astrologer</string>
    <string name="get_started">Get Started</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_sent_to">Otp sent to</string>
    <string name="enter_your_otp">Enter your otp</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="next">Next</string>
    <string name="create_password">Create Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already Have an account? Sign in</string>
    <string name="pranav">Pranav</string>
    <string name="sallwan">Sallwan</string>
    <string name="preeti">Preeti</string>
    <string name="lalit">Lalit</string>
    <string name="chat_call_with_astrologer">Chat/Call with Astrologer</string>
    <string name="ramesh">Ramesh</string>

</resources>