<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icSqaa"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_arrow_back_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/match_making_details"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <!-- Male Section -->
        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/tv_male_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/male_manglik_details"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_male_manglik_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manglik_status"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_male_present_rule_aspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/based_on_aspect"
            android:textStyle="bold" />

        <!-- Add dynamic TextViews for each aspect -->

        <TextView
            android:id="@+id/tv_male_present_rule_house"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/based_on_house"
            android:textStyle="bold" />

        <!-- Add dynamic TextViews for each house -->

        <TextView
            android:id="@+id/tv_male_manglik_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/manglik_report" />

        <!-- Female Section -->
        <TextView
            android:id="@+id/tv_female_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/female_manglik_details"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_female_manglik_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manglik_status"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_female_present_rule_aspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/based_on_aspect"
            android:textStyle="bold" />

        <!-- Add dynamic TextViews for each aspect -->

        <TextView
            android:id="@+id/tv_female_present_rule_house"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/based_on_house"
            android:textStyle="bold" />

        <!-- Add dynamic TextViews for each house -->

        <TextView
            android:id="@+id/tv_female_manglik_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/manglik_report" />

        <!-- Conclusion Section -->
        <TextView
            android:id="@+id/tv_conclusion_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/conclusion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_conclusion_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_conclusion_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/report" />

    </LinearLayout>
</ScrollView>
