<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.androiddev.astrohelpme.ui.viewmodel.auth.SignUpViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lineat_gradient"
        tools:context=".ui.activity.AuthActivity">

        <!-- Main Content -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:hintTextColor="@color/white"
                    app:prefixText="+91">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:text="@={viewModel.mobileNumber}"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="36dp"
                    android:layout_marginTop="18dp"
                    android:backgroundTint="#ffffff"
                    android:onClick="@{viewModel::onSubmitClick}"
                    android:text="@string/next"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/errorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:gravity="center"
                    android:text="@{viewModel.errorMsgObserver}"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:padding="8dp"
                    android:visibility="@{viewModel.errorMsgObserver != null ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/already_have_an_account_sign_in"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <!-- Progress Bar Overlay -->
        <FrameLayout
            android:id="@+id/progress_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_overlay"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:theme="@style/Widget.AppCompat.ProgressBar" />

        </FrameLayout>

    </FrameLayout>
</layout>
